# browsergym-human-recorder

./: .gitignore  README.md  pyproject.toml  record_trajectory.py  reset_server.py
browsergym/experiments/src/browsergym/experiments/benchmark/: base.py  configs.py  utils.py
browsergym/webarena_pro/: README.md  pyproject.toml  requirements.txt
browsergym/webarena_pro/src/browsergym/webarena_pro/: __init__.py  config.py  instance.py  task.py  test.raw.json
browsergym_human_recorder/: __init__.py  cli.py
