[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browsergym-human-recorder"
version = "0.1.0"
description = "CLI for recording human browser trajectories with BrowserGym"
authors = [
    {name = "Fatemeh Pesaran"},
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "gdown",
]

[project.scripts]
browsergym-human-recorder = "browsergym_human_recorder.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["browsergym_human_recorder"]

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
filterwarnings = [
    'ignore::UserWarning:gymnasium.*:',
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial: mark test to be run sequantially (deselect with '-m \"not serial\"')"
]
